[package]
name = "unipager-mqtt-status"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"
futures-channel = "0.3.21"
futures-util = "0.3.21"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.17"
paho-mqtt = { version = "0.11.1", default-features = false, features = ["bundled"] }
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.17.1"
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }
